# catkin

cmake/: catkinConfig.cmake.in
test/mock_resources/src/catkin_make_isolated/src/bar/: package.xml
test/mock_resources/src/catkin_make_isolated/src/bar/include/bar/: bar.h
test/mock_resources/src/catkin_make_isolated/src/bar/src/: bar.cpp
test/mock_resources/src/catkin_make_isolated/src/foo/: fooConfig.cmake.in  package.xml
test/mock_resources/src/catkin_make_isolated/src/foo/include/foo/: foo.h
test/mock_resources/src/catkin_make_isolated/src/foo/src/: foo.cpp
